--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     
@@ -11,9 +11,9 @@
     <br>
 
     <ul>
-        <li><a href="recipes/pizza.html">Recipe Title</a></li>
-        <li><a href="recipes/lasagna.html">Recipe Title</a></li>
-        <li><a href="recipes/cupcake.html">Recipe Title</a></li>
+        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/cupcake.html">Cupcake Recipe</a></li>
     </ul>
     
 
